Fix rendering on small mobile being truncated

--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -6,7 +6,6 @@
 
 body {
 	display: flex;
-	justify-content: center;
 	min-width: rem(320px);
 	min-height: 100vh;
 	color: #fff;
